--- a/homeworks/week5/talipweb/views/home.njk
+++ b/homeworks/week5/talipweb/views/home.njk
@@ -2,6 +2,16 @@
 
 {% block content %}
 here is home
+
+<div>
+    <div style="margin-left:auto; margin-right:auto; width:300px; background:#eee; text-align:center;">asd</div>
+</div>
+
+<p>
+{{ results | dump}}
+</p>
+
+
 {% endblock %}
 
 
